[package]
authors = ["Aberic <aberic@qq.com>"]
name = "starry"
version = "0.1.0"
license = "Apache-2.0"
description = "http & server/client library"
repository = "https://github.com/aberic/starry"
readme = "README.md"
keywords = ["http", "http-server", "http-client"]
edition = "2018"
#autotests = false
#autobenches = false

[dependencies]
log = "0"
log4rs = "1"
lazy_static = "1"
once_cell = "1"
openssl = { version = "0", features = ["vendored"] }
hex = "0"
chrono = "0"
crossbeam = "0"
num_cpus = "1"
bytes = { version = "1", features = ["serde"] }
flate2 = "1"
